--- a/Project_1/weather.html
+++ b/Project_1/weather.html
@@ -1,28 +1,55 @@
 <!DOCTYPE html>
-<!-- Student Name:   -->
+<!--
+  Student Name:  Sai Kumar Mankan
+  ID: 1001236131
+  Email: saikumar.manakan@mavs.uta.edu
+-->
 <html lang="en">
   <head>
     <title>A Weather Web Application</title>
     <meta charset="utf-8"/>
     <script type="text/javascript" src="weather.js"></script>
+    <style>
+    body{
+      margin: 0;
+      padding: 0;
+    }
+    #app{
+      background:#B0C4DE;
+      width: 50%;
+      height: 350px;
+      margin: 0 auto;
+      padding: 5px;
+      margin-top: 10px;
+      border-radius: 10px;
+    }
+    .label{
+      font-weight: bold;
+    }
+    </style>
   </head>
   <body>
-    <form>
-       <label>City: <input type="text" id="form-input"/></label>
-       <input type="button" onclick="sendRequest();" value="Display Info"/>
-    </form>
-    <div id="output" style="display:none">
-      <div>City : <span id="cityName"></span></div>
-      <div>Geo Cordinates : <span id="geoCordinates"></span></div>
-      <div>Sunrise : <span id="sunriseTime"></span></div>
-      <div>Sunset : <span id="sunsetTime"></span></div>
-      <div>Pressure : <span id="pressure"></span></div>
-      <div>Humidity : <span id="humidity"></span></div>
-      <div>Min Temperature : <span id="minTemperature"></span></div>
-      <div>Max Temperature : <span id="maxTemperature"></span></div>
-      <div>Visibility: <span id="visibility"></span></div>
-      <div>Clouds : <span id="clouds"></span></div>
-      <div>Adivse : <span id="advise"></span></div>
+    <div id="app">
+      <h1 style="text-align:center"> City Weather </h1>
+      <hr/>
+      <form style="text-align:center">
+         <label>Enter your City: <input type="text" id="form-input"/></label>
+         <input type="button" onclick="sendRequest();" value="Get Weather"/>
+      </form>
+      <hr/>
+      <div id="output" style="display:none;">
+        <div>City : <span id="cityName"></span></div>
+        <div>Geo Cordinates : <span id="geoCordinates"></span></div>
+        <div>Sunrise : <span id="sunriseTime"></span></div>
+        <div>Sunset : <span id="sunsetTime"></span></div>
+        <div>Pressure : <span id="pressure"></span></div>
+        <div>Humidity : <span id="humidity"></span></div>
+        <div>Min Temperature : <span id="minTemperature"></span></div>
+        <div>Max Temperature : <span id="maxTemperature"></span></div>
+        <div>Visibility: <span id="visibility"></span></div>
+        <div>Clouds : <span id="clouds"></span></div>
+        <div>Adivse : <span id="advise"></span></div>
+      </div>
     </div>
   </body>
 </html>
