--- a/Project_2/webmash.html
+++ b/Project_2/webmash.html
@@ -1,6 +1,6 @@
 
 <!DOCTYPE html>
-<!-- 
+<!--
     Student Name:
 -->
 <html lang="en">
@@ -8,11 +8,47 @@
     <title>Web Mashup: Display Address with Weather Details</title>
     <meta charset="utf-8"/>
     <script type="text/javascript" src="webmash.js"></script>
-    <script async defer src="https://maps.googleapis.com/maps/api/js?key=????" type="text/javascript"></script>
+    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD3LYQVmMrxs_dOIQey72nIx_yMri1MLqM&callback=initMap" type="text/javascript"></script>
+    <style>
+    #mapDiv{
+      display: inline-block;
+      width: 49%;
+    }
+
+    #infoDiv{
+      display: inline-block;
+      width: 50%;
+      float: right;
+      margin-right: 10px;
+    }
+
+    #textArea {
+      width: 100%;
+      height: 200px;
+    }
+
+    #btnDiv{
+      text-align: center;
+      margin: 10px;
+    }
+    </style>
   </head>
-  <body onload="initialize();">
-    <div id="map" style="width: 600px; height: 500px;"></div><br/>
-    <div id="output">&nbsp;</div>
+  <body>
+    <div>
+      <div>
+        <h1 style="text-align:center"> Webmash </h1>
+      </div>
+      <div id="mapDiv">
+        <div id="map" style="width: 600px; height: 500px;"></div><br/>
+      </div>
+      <div id="infoDiv">
+        <div>
+          <textarea id="textArea"></textarea>
+        </div>
+        <div id="btnDiv">
+          <input type="button" value="Clear" style="width:70px;height:25px"/>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
-
