--- a/Project_2/webmash.html
+++ b/Project_2/webmash.html
@@ -1,7 +1,8 @@
-
 <!DOCTYPE html>
 <!--
-    Student Name:
+  Student Name:  Manakan, Sai Kumar
+  ID: 1001236131
+  Email: saikumar.manakan@mavs.uta.edu
 -->
 <html lang="en">
   <head>
