--- a/Project_2/webmash.html
+++ b/Project_2/webmash.html
@@ -11,16 +11,50 @@
     <script type="text/javascript" src="webmash.js"></script>
     <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD3LYQVmMrxs_dOIQey72nIx_yMri1MLqM&callback=initMap" type="text/javascript"></script>
     <style>
+
+    body {
+    	margin: 0;
+    	padding: 0;
+    	font-size: 12px;
+    	font-weight: normal !important;
+    	height: 100%;
+    	min-height: 100%;
+    	background-color:#E0E0E0
+    }
+
+    #header {
+    	height: 26%;
+    	width: 100%;
+    	background: #499bea;
+    	background: -moz-linear-gradient(top, #499bea 0%, #207ce5 100%);
+    	background: -webkit-linear-gradient(top, #499bea 0%, #207ce5 100%);
+    	background: linear-gradient(to bottom, #499bea 0%, #207ce5 100%);
+      text-align: center;
+    }
+
+    #logoContainer {
+    	margin-left: 16px;
+    	height: 73%;
+    	font-size: 70px;
+    	color: #FFF;
+    	padding: 10px;
+    }
+
+    #logo {
+    	text-shadow: 1px 1px grey;
+    }
+
     #mapDiv{
       display: inline-block;
-      width: 49%;
+      width: 45%;
+      margin: 15px;
     }
 
     #infoDiv{
       display: inline-block;
       width: 50%;
       float: right;
-      margin-right: 10px;
+      margin: 15px;
     }
 
     #textArea {
@@ -37,17 +71,22 @@
   <body>
     <div>
       <div>
-        <h1 style="text-align:center"> Webmash </h1>
+        <div id="header">
+          <div id="logoContainer">
+            <span id="logo">Webmash</span>
+          </div>
+        </div>
       </div>
       <div id="mapDiv">
         <div id="map" style="width: 600px; height: 500px;"></div><br/>
-      </div>
-      <div id="infoDiv">
+      </div><div id="infoDiv">
         <div>
-          <textarea id="textArea"></textarea>
+          <textarea id="textArea" readonly>Welcome to Webmash. Click anywhere on the map to get weather details.</textarea>
         </div>
         <div id="btnDiv">
-          <input type="button" value="Clear" style="width:70px;height:25px"/>
+          <button title="Clear contents" id="clearBtn" style="width:70px;height:25px">
+            Clear
+          </button>
         </div>
       </div>
     </div>
