--- a/Project_2/src/webmash.html
+++ b/Project_2/src/webmash.html
@@ -3,6 +3,8 @@
   Student Name:  Manakan, Sai Kumar
   ID: 1001236131
   Email: saikumar.manakan@mavs.uta.edu
+  Project Name: Web Mash
+  Due date: Oct 26 2016
 -->
 <html lang="en">
   <head>
@@ -78,12 +80,15 @@
         </div>
       </div>
       <div id="mapDiv">
+        <!-- Map Area -->
         <div id="map" style="width: 600px; height: 500px;"></div><br/>
       </div><div id="infoDiv">
         <div>
+          <!-- Text Area -->
           <textarea id="textArea" readonly>Welcome to Webmash. Click anywhere on the map to get weather details.</textarea>
         </div>
         <div id="btnDiv">
+          <!-- Clear Button -->
           <button title="Clear contents" id="clearBtn" style="width:70px;height:25px">
             Clear
           </button>
